src/main/kotlin/com/example/onui/global/config/error/data/BindErrorResponse.kt
package com.example.onui.global.config.error.data

import org.springframework.http.HttpStatus

data class BindErrorResponse(
    val status: HttpStatus,
    val fieldError: List<Map<String, String?>>
)